[project]
name = "trainbase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "onnxscript>=0.7.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu126"]
index-strategy = "unsafe-best-match"
